svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 82
